example/tests/compile_errors/04a_bad_body_response.stderr
error: autoroute macro failed: expected one of: content_type, serializer, headers, description, trace
  --> tests/compile_errors/04a_bad_body_response.rs:11:62
   |
11 | #[autoroute(GET, path="/home", responses=[(200, body=String, unknown, description="desc")])]
   |                                                              ^^^^^^^

error[E0425]: cannot find type `Test` in this scope
 --> tests/compile_errors/04a_bad_body_response.rs:7:54
  |
7 | #[autoroute(GET, path="/home", responses=[(200, body=Test, description="desc")])]
  |                                                      ^^^^ not found in this scope

error[E0425]: cannot find function, tuple struct or tuple variant `Test` in this scope
  --> tests/compile_errors/04a_bad_body_response.rs:14:73
   |
14 | #[autoroute(GET, path="/home", responses=[(200, body=String, serializer=Test, description="desc")])]
   |                                                                         ^^^^ not found in this scope

error[E0618]: expected function, found `Option<_>`
  --> tests/compile_errors/04a_bad_body_response.rs:18:73
   |
18 | #[autoroute(GET, path="/home", responses=[(200, body=String, serializer=None, description="desc")])]
   |                                                                         ^^^^ call expression requires function

error[E0599]: no method named `into_response` found for tuple `(StatusCode, Option<std::string::String>)` in the current scope
  --> tests/compile_errors/04a_bad_body_response.rs:22:43
   |
22 | #[autoroute(GET, path="/home", responses=[(200, body=String, serializer=Option::Some, description="desc")])]
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `(StatusCode, Option<std::string::String>)`
   |
help: one of the expressions' fields has a method of the same name
   |
22 | #[autoroute(GET, path="/home", responses=[0.(200, body=String, serializer=Option::Some, description="desc")])]
   |                                           ++
